# Mamancraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  LICENSE_en.txt  README.md  SECURITY.md  build_log.txt  build_output.txt  build_output_engine.txt  cmake_output.txt  compile_flags.txt
.agents/tmp/: ag_output.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
assets/base/: pack.json
assets/base/assets/mc/shaders/: frustum_cull.comp  triangle.frag  triangle.vert  voxel.frag  voxel.vert
assets/shaders/: triangle.vert
include/Mamancraft/Core/: Application.hpp  AssetManager.hpp  FileSystem.hpp  InputManager.hpp  Logger.hpp  ResourcePackManager.hpp  TaskSystem.hpp
include/Mamancraft/Renderer/: Camera.hpp  CullingSystem.hpp  GPUStructures.hpp  IndirectDrawSystem.hpp  MaterialSystem.hpp  Vertex.hpp  VulkanContext.hpp  VulkanRenderer.hpp
include/Mamancraft/Renderer/Vulkan/: DeletionQueue.hpp  VulkanAllocator.hpp  VulkanBuffer.hpp  VulkanCommandPool.hpp  VulkanDevice.hpp  VulkanFrameData.hpp  VulkanFramebuffer.hpp  VulkanImage.hpp  VulkanMesh.hpp  VulkanPipeline.hpp  VulkanRenderPass.hpp  VulkanShader.hpp  VulkanSwapchain.hpp  VulkanTexture.hpp
include/Mamancraft/Voxel/: Biome.hpp  Block.hpp  BlockRegistry.hpp  Chunk.hpp  HeightmapSampler.hpp  NoiseConfig.hpp  OakTreeGenerator.hpp  RiverGenerator.hpp  TerrainGenerator.hpp  VoxelMesher.hpp  World.hpp
src/: main.cpp
src/Core/: Application.cpp  AssetManager.cpp  InputManager.cpp  Logger.cpp  ResourcePackManager.cpp  TaskSystem.cpp
src/Renderer/: Camera.cpp  CullingSystem.cpp  IndirectDrawSystem.cpp  MaterialSystem.cpp  VulkanContext.cpp  VulkanRenderer.cpp
src/Renderer/Vulkan/: VulkanAllocator.cpp  VulkanBuffer.cpp  VulkanCommandPool.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
src/Voxel/: HeightmapSampler.cpp  OakTreeGenerator.cpp  RiverGenerator.cpp  TerrainGenerator.cpp  VoxelMesher.cpp  World.cpp
tests/: test_deps.cpp  test_vulkan_init.cpp  test_vulkan_pipeline.cpp
